[Windows] Rendering stops when mouse is moving for some types of animations. https://bugs.webkit.org/show_bug.cgi?id=121329

Reviewed by Anders Carlsson.

* WebView.cpp:
(WebView::WebView): Add new display flag.
(WebView::repaint): Mark view as needing a display operation.
(WebView::addToDirtyRegion): Ditto
(WebView::scrollBackingStore): Ditto
(WebView::sizeChanged): Ditto
(WebView::updateBackingStore): Ditto
(WebView::performLayeredWindowUpdate): Mark the WebView as having been
moved to screen.
(WebView::paintIntoWindow): Ditto
(WebView::WebViewWndProc): If the view needs display, and it was not done during
this message loop iteration, draw the screen.
* WebView.h:
(WebView::needsDisplay): Added


Canonical link: https://commits.webkit.org/139435@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155901 268f45cc-cd09-0410-ab3c-d52691b4dbfc