Source/WebKit/win/WebView.cpp
@@ -396,6 +396,7 @@ WebView::WebView()
     , m_nextDisplayIsSynchronous(false)
     , m_lastSetCursor(0)
     , m_usesLayeredWindow(false)
+    , m_needsDisplay(false)
 {
     JSC::initializeThreading();
     WTF::initializeMainThread();
@@ -794,6 +795,7 @@ void WebView::repaint(const WebCore::IntRect& windowRect, bool contentChanged, b
         else
             ::UpdateWindow(m_viewWindow);
     }
+    m_needsDisplay = true;
 }
 
 void WebView::deleteBackingStore()
@@ -832,6 +834,8 @@ bool WebView::ensureBackingStore()
 
 void WebView::addToDirtyRegion(const IntRect& dirtyRect)
 {
+    m_needsDisplay = true;
+
     // FIXME: We want an assert here saying that the dirtyRect is inside the clienRect,
     // but it was being hit during our layout tests, and is being investigated in
     // http://webkit.org/b/29350.
@@ -850,6 +854,8 @@ void WebView::addToDirtyRegion(const IntRect& dirtyRect)
 
 void WebView::addToDirtyRegion(GDIObject<HRGN> newRegion)
 {
+    m_needsDisplay = true;
+
 #if USE(ACCELERATED_COMPOSITING)
     ASSERT(!isAcceleratedCompositing());
 #endif
@@ -869,6 +875,8 @@ void WebView::addToDirtyRegion(GDIObject<HRGN> newRegion)
 
 void WebView::scrollBackingStore(FrameView* frameView, int dx, int dy, const IntRect& scrollViewRect, const IntRect& clipRect)
 {
+    m_needsDisplay = true;
+
 #if USE(ACCELERATED_COMPOSITING)
     if (isAcceleratedCompositing()) {
         // FIXME: We should be doing something smarter here, like moving tiles around and painting
@@ -921,6 +929,8 @@ void WebView::scrollBackingStore(FrameView* frameView, int dx, int dy, const Int
 
 void WebView::sizeChanged(const IntSize& newSize)
 {
+    m_needsDisplay = true;
+
     deleteBackingStore();
 
     if (Frame* coreFrame = core(topLevelFrame()))
@@ -1027,6 +1037,8 @@ void WebView::updateBackingStore(FrameView* frameView, HDC dc, bool backingStore
         ::SelectObject(bitmapDC, oldBitmap);
 
     GdiFlush();
+
+    m_needsDisplay = true;
 }
 
 void WebView::performLayeredWindowUpdate()
@@ -1053,6 +1065,8 @@ void WebView::performLayeredWindowUpdate()
     ::UpdateLayeredWindow(m_viewWindow, hdcScreen, 0, &windowSize, hdcMem.get(), &layerPos, 0, &blendFunction, ULW_ALPHA);
 
     ::SelectObject(hdcMem.get(), hbmOld);
+
+    m_needsDisplay = false;
 }
 
 void WebView::paint(HDC dc, LPARAM options)
@@ -1207,6 +1221,8 @@ void WebView::paintIntoWindow(HDC bitmapDC, HDC windowDC, const IntRect& dirtyRe
     // in the destination DC.
     BitBlt(windowDC, dirtyRect.x(), dirtyRect.y(), dirtyRect.width(), dirtyRect.height(), bitmapDC,
            dirtyRect.x(), dirtyRect.y(), SRCCOPY);
+
+    m_needsDisplay = false;
 }
 
 void WebView::frameRect(RECT* rect)
@@ -2425,6 +2441,12 @@ LRESULT CALLBACK WebView::WebViewWndProc(HWND hWnd, UINT message, WPARAM wParam,
         default:
             handled = false;
             break;
+    }
+
+    if (webView->needsDisplay()) {
+        webView->paint(0, 0);
+        if (webView->usesLayeredWindow())
+            webView->performLayeredWindowUpdate();
     }
 
     if (!handled)
